# typopotamus

./: .gitignore  Cargo.toml  README.md
typopotamus-cli/: Cargo.toml
typopotamus-cli/src/: main.rs
typopotamus-core/: Cargo.toml
typopotamus-core/src/: download.rs  extractor.rs  inspect.rs  lib.rs  model.rs  selection.rs
typopotamus-tui/: Cargo.toml
typopotamus-tui/src/: app.rs  main.rs
