[workspace]
members = [
  "typopotamus-core",
  "typopotamus-tui",
  "typopotamus-cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
once_cell = "1.21"
percent-encoding = "2.3"
ratatui = "0.29"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli", "deflate"] }
scraper = "0.23"
url = "2.5"
typopotamus-core = { path = "typopotamus-core" }
